--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import "tailwindcss";
+html, body, #root {
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
